--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     </em></strong></header>
 <br>
 <br>
-     <img src="https://via.placeholder.com/200" alt="">
+<!--https://via.placeholder.com/100-->
+     <img src="images\stock photo.jpg" alt="Jeff Whitner- photo will change" class="center">
 
       <h2><strong> WELCOME!</strong><br>
     Thank you for taking the time to review my Portfolio </h2>
@@ -34,19 +35,19 @@
    
    <br>
    <br>
-
-   <nav class="contact" id="Get in touch">
+<!-- Need to add links to contact information-->
+<!-- add borders to sections -->
+   <div class="contact" id="Get in touch">
        <ul>
-           <li>EMAIL</li>
            <li>PHONE</li>
            <li>@SLACK</li>
            <li>GITHUB</li>
        </ul>
-    </nav>
+    </div>
 
 <!-- Could code a section class here rather than using "H" tags- presentation may look better-->
    <h4><strong>SOLO PROJECTS</strong></h4>
-
+<!-- need to add "containers" with links to projects-->
 
 
 <br>
@@ -58,6 +59,12 @@
 <div>
 
 </div>
+<footer>
+<a href="github.com/fishdestroyer" class="footer-link">Github.com/fishdestroyer</a>
+<br>
+Again, thank you for viewing my portfolio
+
+</footer>
    
 
 </body>
