--- a/index.html
+++ b/index.html
@@ -5,22 +5,20 @@
     <meta http-equiv="X-UA-compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="assets\style.css" />
-
-    <title>Programming Portfolio</title>
+    <title>Programming Portfolio</title>  
 </head>
-
 <body>
+   <header><strong><em> Jeff Whitner<br>
+      Current FullStack Web Developer Student </em></strong></header>
+     <img src="images\Portfolio image 2.jpg" alt="Jeff Whitner- photo will change" class="center">
 
-    <header><strong><em> Jeff Whitner<br>
-      Current FullStack Web Developer Student
-    </em></strong></header>
+    </header>
 <br>
 <br>
-<!--https://via.placeholder.com/100-->
-     <img src="images\stock photo.jpg" alt="Jeff Whitner- photo will change" class="center">
-
-      <h2><strong> WELCOME!</strong><br>
-    Thank you for taking the time to review my Portfolio </h2>
+<!-- add section here-->
+   
+      <h1><strong> WELCOME!</strong><br>
+    Thank you for taking the time to review my Portfolio </h1>
     
 
        <P>  
@@ -32,12 +30,18 @@
            as being a vital and essential part for this industry to technologically grow, from Buildingt Automation to smoother operations flow between the field technicians and office, and that is what I am hoping to get into.
 
        </p>
-   
+
+     <section class="projects" id="projects">
+         <header>
+         <h2 class="PROJECTS"></h2>
+        </header>
+     </section>
    <br>
    <br>
 <!-- Need to add links to contact information-->
 <!-- add borders to sections -->
    <div class="contact" id="Get in touch">
+       <header> Get in touch</header>
        <ul>
            <li>PHONE</li>
            <li>@SLACK</li>
@@ -46,7 +50,7 @@
     </div>
 
 <!-- Could code a section class here rather than using "H" tags- presentation may look better-->
-   <h4><strong>SOLO PROJECTS</strong></h4>
+   
 <!-- need to add "containers" with links to projects-->
 
 
@@ -54,13 +58,13 @@
 <br>
 <br>
 
-<h5><strong>COLLABERATIVE PROJECTS</strong></h5>
+
 
 <div>
 
 </div>
 <footer>
-<a href="github.com/fishdestroyer" class="footer-link">Github.com/fishdestroyer</a>
+<a href="https://github.com/fishdestroyer" class="footer-link">Github.com/fishdestroyer</a>
 <br>
 Again, thank you for viewing my portfolio
 
