--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                 <a href="#about me">About Me</a>
             </li>
             <li>
-                <a href="Conact">Contact Me</a>
+                <a href="#Contact">Contact Me</a>
             </li>
             <li>
-                <a href="projects">My Projects</a>
+                <a href="#projects">My Projects</a>
             </li>
     </nav>
        <strong><em> HEADER</em></strong>
@@ -30,7 +30,7 @@
      
 
     </header>
-<br>
+
 <h1><strong> WELCOME!</strong><br>
     Thank you for taking the time to review my Portfolio </h1>
 
