--- a/index.html
+++ b/index.html
@@ -31,10 +31,8 @@
 
     </header>
 
-<h1><strong> WELCOME!</strong><br>
-    Thank you for taking the time to review my Portfolio </h1>
+ <section id="about me">
 
-<div class="about me"></div>
     <ul>
          
           
@@ -46,14 +44,22 @@
            as being a vital and essential part for this industry to technologically grow, from Buildingt Automation to smoother operations flow between the field technicians and office, and that is where I would like
            my coding knowledge to make the bigges impact
     </ul> 
+</section>
 
-<div class= "Contact">
+<section id="contact">
     <h2>Feel free to reach out</h2>
-</div>
       <ul>
           <li><a href="#email">Email</a></li>
           <li><a href="#slack">Slack</a></li>
-      </ul>
+        </ul>
+    </section>
+
+<section id="projects">
+    <h2>Solo Projects</h2>
+
+
+    <h2>Group Projects</h2>
+</section>
 
 <footer>
 <a href="https://github.com/fishdestroyer" class="footer-link">Github.com/fishdestroyer</a>
