added phone link

--- a/index.html
+++ b/index.html
@@ -48,10 +48,11 @@
 
 <section id="contact">
     <h2>Feel free to reach out</h2>
-      <ul>
-          <li><a href="#email">Email</a></li>
+      <ol>
+          <li><a href="#email">Send me an E-mail</a></li>
           <li><a href="#slack">Slack</a></li>
-        </ul>
+          <li><a href="#phone">Phone</a></li>
+      </ol>
     </section>
 
 <section id="projects">
