--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     
 </section>
 
-<section id="contact">
+<section id="contact" class="contact">
     <h2>Feel free to reach out</h2>
       <ul>
           <li><a href="#email">Send me an E-mail</a></li>
