--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
     
 </section>
 
-<section id="contact" class="contact">
+<section class="Contact" id="Contact">
     <h2>Feel free to reach out</h2>
       <ul>
-          <li><a href="#email">Send me an E-mail</a></li>
+          <li><a href="mailto:jeffwhitner@gmail.com">Send me an E-mail</a></li>
           <li><a href="#slack">Slack</a></li>
           <li><a href="#phone">Phone</a></li>
       </ul>
