--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <ul>
           <li><a href="mailto:jeffwhitner@gmail.com">Send me an E-mail</a></li>
           <li><a href="#slack">Slack</a></li>
-          <li><a href="#phone">Phone</a></li>
+          <li><a href="#210.290.4160">210.290.4160</a></li>
       </ul>
  </section>
 
