updated slack and picture with slides attachment

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <body>
 <header>
     <h1>
-        <a href="/">PORTFOLIO</a>
+        <a href="/">My coding Portfolio</a>
     </h1>
     <nav>
         <ul>
@@ -25,8 +25,8 @@
                 <a href="#projects">My Projects</a>
             </li>
     </nav>
-       <strong><em> HEADER</em></strong>
-     <img src="images\Portfolio image 2.jpg" alt="Jeff Whitner- photo will change" class="center">
+       <strong><em></em></strong>
+     <img src="images\Jeff Whitner 1.jpg" alt="Photo of Jeff Whitner" class="center">
      
 
     </header>
@@ -48,7 +48,7 @@
     <h2>Feel free to reach out</h2>
       <ul>
           <li><a href="mailto:jeffwhitner@gmail.com">Send me an E-mail</a></li>
-          <li><a href="#slack">Slack</a></li>
+          <li><a href="https://utavirtbofsfp-cyl1304.slack.com/archives/D02DGVBDLTY">Slack</a></li>
           <li><a href="#210.290.4160">210.290.4160</a></li>
       </ul>
  </section>
