added projects and styling to h3

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <body>
 <header>
     <h1>
-        <a href="/">My coding Portfolio</a>
+        <a href=>My coding Portfolio</a>
     </h1>
     <nav>
         <ul>
@@ -35,35 +35,40 @@
      <h2>A little about myself</h2>
          
      <ul>
-           My name is Jeff Whitner and I have been in my current industry for 24 years. The HVAC/R industry has been a very rewarding career and many aspects of it I continuously enjoy and learn
-           from on a daily basis. I also get to teach, which is an AMAZING aspect at this point in my career. Unfotunately, I feel this I have come to a stale point in my career- even though I love what I do, it is becoming
-           repetitive. To go further up the ladder, I have to gain more knowledge in a different area of the same field, that is why I have chosen coding. There are several areas in  the HVAC/ R field where I can see coding 
-           as being a vital and essential part for this industry to technologically grow, from Buildingt Automation to smoother operations flow between the field technicians and office, and that is where I would like
-           my coding knowledge to make the bigges impact
+        Ther will be a little about me when I decide how everything is going to turn out. I will edit this more throughout the class and as I learn more.
     </ul>    
     
 </section>
+
 
 <section class="Contact" id="Contact">
     <h2>Feel free to reach out</h2>
       <ul>
           <li><a href="mailto:jeffwhitner@gmail.com">Send me an E-mail</a></li>
           <li><a href="https://utavirtbofsfp-cyl1304.slack.com/archives/D02DGVBDLTY">Slack</a></li>
-          <li><a href="#210.290.4160">210.290.4160</a></li>
+          <li><a href="#210.290.4160">Phone</a></li>
       </ul>
  </section>
 
-<section id="projects">
-    <h2>Solo Projects</h2>
+ 
 
-
-    <h2>Group Projects</h2>
+<section  id="projects" class="projects">
+    <h2><strong>My Projects</strong></h2>
+    <div>
+        <h3>Solo Projects</h3>
+        <img src="images\password generator.JPG">
+        <a href="https://fishdestroyer.github.io/password-generator/"></a>
+     </div>
+    <div>
+        <h3>Group Projects</h3>
+        <img src="images\taco shop project.png">
+        </div>
 </section>
 
 <footer>
 <a href="https://github.com/fishdestroyer" class="footer-link">Github.com/fishdestroyer</a>
 <br>
-Again, thank you for viewing my portfolio
+Thank you for checking out my portfolio
 
 </footer>
    
