updated projects with embed projects

--- a/index.html
+++ b/index.html
@@ -56,12 +56,15 @@
     <h2><strong>My Projects</strong></h2>
     <div>
         <h3>Solo Projects</h3>
-        <img src="images\password generator.JPG">
-        <a href="https://fishdestroyer.github.io/password-generator/"></a>
+        <embed src="https://fishdestroyer.github.io/password-generator/" style="width: 600px; height: 175px;">
+
+       <!-- <img src="images\password generator.JPG">
+        <a href="https://fishdestroyer.github.io/password-generator/"></a>-->
      </div>
     <div>
         <h3>Group Projects</h3>
-        <img src="images\taco shop project.png">
+        <embed src="https://trujilml.github.io/top-3-taco-shops/" style="width: 1000px; height: 400px;">
+        <!--<img src="images\taco shop project.png">-->
         </div>
 </section>
 
