updated/ removed phone number from site

--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
       <ul>
           <li><a href="mailto:jeffwhitner@gmail.com">Send me an E-mail</a></li>
           <li><a href="https://utavirtbofsfp-cyl1304.slack.com/archives/D02DGVBDLTY">Slack</a></li>
-          <li><a href="#210.290.4160">Phone</a></li>
+          <li><a href="#phone">Phone</a></li>
       </ul>
+      <!--<div>(210) 290- 4160</div>-->
  </section>
 
  
@@ -56,7 +57,8 @@
     <h2><strong>My Projects</strong></h2>
     <div>
         <h3>Solo Projects</h3>
-        <embed src="https://fishdestroyer.github.io/password-generator/" style="width: 600px; height: 175px;">
+        <embed src="https://fishdestroyer.github.io/password-generator/" style="width: 1500px; height: 600px;">
+            <embed src ="https://fishdestroyer.github.io/run-buddy/" style="width: 1000px; height: 300px">
 
        <!-- <img src="images\password generator.JPG">
         <a href="https://fishdestroyer.github.io/password-generator/"></a>-->
